Update: Fixed margin and spacing of the chatbot.

--- a/Customer Service Bot/style.css
+++ b/Customer Service Bot/style.css
@@ -70,6 +70,7 @@ body {
 .chat .bot-photo {
   width: 50px;
   height: 50px;
+  margin-left: 2%;
   background-color: #3D124F;
   border-radius: 50%;
 }
@@ -85,10 +86,14 @@ body {
 
 .friend .chat-message {
   background: #1adda4;
+    width: 62%;
+    margin-right: 18%;
 }
 
 .self .chat-message {
   background: #1ddced;
+    width: 62%;
+    margin-left: 18%;
   order: -1;
 }
 
